--- a/composer.json
+++ b/composer.json
@@ -28,13 +28,8 @@
                 "think\\addons\\Service"
             ],
             "config":{
-                "addons": "src/config.php"
+                "addons": "src/config/addons.php"
             }
         }
-    },
-    "scripts" : {
-        "post-install-cmd": [
-            "php think addons:config"
-        ]
     }
 }
